// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CreditEntryForm - Visual Regression > renders empty form 1`] = `
<div>
  <form
    class="css-0"
  >
    <div
      class="chakra-stack css-1cyyl4u"
    >
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_0_"
          id="field-_r_0_-label"
        >
          Customer
        </label>
        <div
          class="css-79elbk"
        >
          <div
            class="chakra-input__group css-1y0e7gb"
            data-group="true"
          >
            <div
              class="chakra-input__left-element css-gv1iwz"
            >
              <svg
                class="chakra-icon css-177yplm"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <input
              class="chakra-input css-qluo93"
              id="field-_r_0_"
              placeholder="Search customer by name or IC..."
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_1_"
          id="field-_r_1_-label"
        >
          Item
        </label>
        <input
          class="chakra-input css-1cjy4zv"
          id="field-_r_1_"
          placeholder="e.g. Groceries, Fuel"
          value=""
        />
      </div>
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_2_"
          id="field-_r_2_-label"
        >
          Amount
        </label>
        <div
          class="chakra-input__group css-1y0e7gb"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1yy0viz"
          >
            RM
          </div>
          <input
            class="chakra-input css-1u8e9oz"
            id="field-_r_2_"
            placeholder="0.00"
            step="0.01"
            type="number"
            value=""
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_3_"
          id="field-_r_3_-label"
        >
          Date
        </label>
        <input
          class="chakra-input css-1cjy4zv"
          id="field-_r_3_"
          type="date"
          value="2026-03-29"
        />
      </div>
      <button
        class="chakra-button css-1w0dd3u"
        type="submit"
      >
        Create Credit Entry
      </button>
    </div>
  </form>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;

exports[`CreditEntryForm - Visual Regression > renders form in loading state 1`] = `
<div>
  <form
    class="css-0"
  >
    <div
      class="chakra-stack css-1cyyl4u"
    >
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_4_"
          id="field-_r_4_-label"
        >
          Customer
        </label>
        <div
          class="css-79elbk"
        >
          <div
            class="chakra-input__group css-1y0e7gb"
            data-group="true"
          >
            <div
              class="chakra-input__left-element css-gv1iwz"
            >
              <svg
                class="chakra-icon css-177yplm"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M23.384,21.619,16.855,15.09a9.284,9.284,0,1,0-1.768,1.768l6.529,6.529a1.266,1.266,0,0,0,1.768,0A1.251,1.251,0,0,0,23.384,21.619ZM2.75,9.5a6.75,6.75,0,1,1,6.75,6.75A6.758,6.758,0,0,1,2.75,9.5Z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <input
              class="chakra-input css-qluo93"
              id="field-_r_4_"
              placeholder="Search customer by name or IC..."
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_5_"
          id="field-_r_5_-label"
        >
          Item
        </label>
        <input
          class="chakra-input css-1cjy4zv"
          id="field-_r_5_"
          placeholder="e.g. Groceries, Fuel"
          value=""
        />
      </div>
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_6_"
          id="field-_r_6_-label"
        >
          Amount
        </label>
        <div
          class="chakra-input__group css-1y0e7gb"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1yy0viz"
          >
            RM
          </div>
          <input
            class="chakra-input css-1u8e9oz"
            id="field-_r_6_"
            placeholder="0.00"
            step="0.01"
            type="number"
            value=""
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-1kxonj9"
        role="group"
      >
        <label
          class="chakra-form__label css-g6pte"
          for="field-_r_7_"
          id="field-_r_7_-label"
        >
          Date
        </label>
        <input
          class="chakra-input css-1cjy4zv"
          id="field-_r_7_"
          type="date"
          value="2026-03-29"
        />
      </div>
      <button
        class="chakra-button css-1w0dd3u"
        data-loading=""
        disabled=""
        type="submit"
      >
        <div
          class="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
        >
          <div
            class="chakra-spinner css-1fc7edv"
          >
            <span
              class="css-8b45rq"
            >
              Loading...
            </span>
          </div>
        </div>
        <span
          class="css-q7lffx"
        >
          Create Credit Entry
        </span>
      </button>
    </div>
  </form>
  <span
    hidden=""
    id="__chakra_env"
  />
</div>
`;
